[gd_scene load_steps=7 format=2]

[ext_resource path="res://Red/scripts/AreaLight.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]

[sub_resource type="BoxShape" id=2]

[sub_resource type="BoxShape" id=3]

[sub_resource type="BoxShape" id=4]

[sub_resource type="BoxShape" id=5]

[node name="AreaLight" type="Spatial"]
script = ExtResource( 1 )

[node name="AreaDialogLight1" type="Area" parent="."]
transform = Transform( 8, 0, 0, 0, 10, 0, 0, 0, 22.33, -8.939, 21.954, -407.104 )

[node name="CollisionShape" type="CollisionShape" parent="AreaDialogLight1"]
shape = SubResource( 1 )

[node name="AreaDialogLight2" type="Area" parent="."]
transform = Transform( 8, 0, 0, 0, 10, 0, 0, 0, 22.33, 412.706, 21.954, -408.755 )

[node name="CollisionShape" type="CollisionShape" parent="AreaDialogLight2"]
shape = SubResource( 2 )

[node name="AreaDialogLight3" type="Area" parent="."]
transform = Transform( 8, 0, 0, 0, 10, 0, 0, 0, 10, 402.413, 21.954, 207.592 )

[node name="CollisionShape" type="CollisionShape" parent="AreaDialogLight3"]
shape = SubResource( 3 )

[node name="AreaDialogLight4" type="Area" parent="."]
transform = Transform( 12, 0, 0, 0, 10, 0, 0, 0, 10, 1340.89, 114.077, 361.899 )

[node name="CollisionShape" type="CollisionShape" parent="AreaDialogLight4"]
shape = SubResource( 4 )

[node name="AreaDialogLight5" type="Area" parent="."]
transform = Transform( 50, 0, 0, 0, 10, 0, 0, 0, 10, 309.987, 54.114, 1029.4 )

[node name="CollisionShape" type="CollisionShape" parent="AreaDialogLight5"]
shape = SubResource( 5 )
[connection signal="body_entered" from="AreaDialogLight1" to="." method="_on_AreaDialogLight1_body_entered"]
[connection signal="body_entered" from="AreaDialogLight2" to="." method="_on_AreaDialogLight2_body_entered"]
[connection signal="body_entered" from="AreaDialogLight3" to="." method="_on_AreaDialogLight3_body_entered"]
[connection signal="body_entered" from="AreaDialogLight4" to="." method="_on_AreaDialogLight4_body_entered"]
[connection signal="body_entered" from="AreaDialogLight5" to="." method="_on_AreaDialogLight5_body_entered"]
